# Image-set-org

./: meson.build  net.davidholt.imageorg.json
data/: meson.build  net.davidholt.imageorg.appdata.xml.in  net.davidholt.imageorg.desktop.in  net.davidholt.imageorg.gschema.xml
po/: POTFILES  meson.build
src/: imageorgmp-window.c  imageorgmp-window.h  imageorgmp-window.ui  imageorgmp.gresource.xml  main.c  meson.build
